--- a/src/Pages/Auth/Register.css
+++ b/src/Pages/Auth/Register.css
@@ -25,7 +25,7 @@
   width: 75%;
   height: 100vh;
   background-color: var(--clr-white);
-  box-shadow: -10px 0px 100px  var(--logo-color);
+  box-shadow: -10px 0px 100px var(--logo-color);
   position: relative;
 }
 .register-text-left {
@@ -63,21 +63,21 @@
 .registering-part-logo {
   width: 35rem;
   height: 6.5rem;
-  background-color:black;
+  background-color: black;
   object-fit: contain;
   margin: 2rem auto;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.registering-part-logo img{
+.registering-part-logo img {
   width: 11rem;
   height: 4rem;
 }
 
 /* THE WHITE PART  */
 .registring-part-form-contianer {
- padding-top: 2rem;
+  padding-top: 2rem;
   width: 100rem;
   height: 62rem;
   min-width: 109.3rem;
@@ -120,19 +120,98 @@
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  font-size: .8rem;
+  font-size: 0.8rem;
   color: var(--clr-black);
 }
-.cancel-box h1{
+.cancel-box h1 {
   font-weight: 300;
   color: rgb(59, 59, 59);
 }
-.cancel-box h1 span{
+.cancel-box h1 span {
   font-weight: 650;
   color: black;
   cursor: pointer;
 }
-.cancel-box h1 span:hover{
+.cancel-box h1 span:hover {
   text-decoration: underline;
-  
+}
+/* MOBILE PHONE STYLING */
+@media screen and (max-width: 480px) {
+
+  .green-left {
+    display: none;
+    width: 25%;
+    height: 100%;
+  }
+  .white-right {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--clr-white);
+    /* box-shadow: -10px 0px 100px var(--logo-color); */
+    position: relative;
+  }
+  .registring-part-form-contianer {
+  padding-top: 2rem;
+  width: 100%;
+  height: 62rem;
+  background-color: var(--clr-white);
+  border-radius: 4px;
+  /* box-shadow: 0 6px 30px rgba(0, 0, 0, 0.2); */
+  margin: 0 auto;
+}
+  .white-right {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--clr-white);
+    /* box-shadow: -10px 0px 100px var(--logo-color); */
+    position: relative;
+  }
+  .registering-part-logo {
+    width: 11rem;
+    height: 5rem;
+    background-color: black;
+    object-fit: contain;
+    margin: 2rem auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .registering-part-logo img {
+    width: 8rem;
+    height: 3rem;
+  }
+  /* THE WHITE PART  */
+  .registring-part-form-contianer {
+    /* display: none; */
+    padding-top: 2rem;
+    width: 100%;
+    height: 100vh;
+    /* min-width: 109.3rem; */
+    background-color: var(--clr-white);
+    border-radius: 4px;
+    margin: 0 auto;
+  }
+
+  /* cancel text */
+.cancel-box {
+  position: absolute;
+  bottom: 1.2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 0.4rem;
+  color: var(--clr-black);
+}
+.cancel-box h1 {
+  font-weight: 300;
+  color: rgb(59, 59, 59);
+}
+.cancel-box h1 span {
+  font-weight: 650;
+  color: black;
+  cursor: pointer;
+}
+.cancel-box h1 span:hover {
+  text-decoration: underline;
+}
 }
