--- a/src/Pages/COD/Cod.module.css
+++ b/src/Pages/COD/Cod.module.css
@@ -588,9 +588,10 @@ align-items: center;
   display: flex;
   justify-content: space-between;
   gap: 8px;
-  background-color: red;
+  /* background-color: red; */
   width: 60%;
-  height: 70;
+  height: 40px;
+
 }
 
 .columnButton {
