--- a/src/Components/Stepper.module.css
+++ b/src/Components/Stepper.module.css
@@ -509,4 +509,266 @@ input[type="tel"] {
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width: 480px){
+  .form-container {
+  /* width: 100%; */
+  /* max-width: 60rem; */
+  margin: 0rem auto;
+  display: flex;
+  /* display: none; */
+  flex-direction: column;
+  justify-content: center;
+  gap:1rem;
+  /* overflow-y: scroll; */
+}
+.form-input-container{
+  overflow-y: auto;
+  padding-bottom: 0px;
+  margin-bottom: -76px;
+  height: 38rem;
+
+}
+.stepper-div{
+  position: sticky;
+  top: 0;
+  z-index: 10 ;
+  background-color: white;
+  border-bottom: 1px solid var(--main-theme);
+  margin-top: -35px;
+}
+
+.form-title {
+  text-align: center;
+  margin-bottom: 27px;
+  /* border: 1px solid var(--clr-black); */
+  font-size: 1.2rem;
+  color: #064e3b;
+}
+
+/* STEPPER STYLING */
+.stepper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  position: relative;
+}
+.stepper p {
+  color: var(--clr-black);
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+}
+.step-item {
+  flex: 1;
+  text-align: center;
+  position: relative;
+}
+
+/* .step-item::after {
+  content: "";
+  position: absolute;
+  top: 1rem;
+  right: -50%;
+  width: 100%;
+  height: 10px;
+  background-color: var(--clr-green);
+  z-index: -1;
+}  */
+.step-item:last-child::after {
+  display: none;
+}
+
+.step-circle {
+  width: 2.8rem;
+  height: 2.8rem;
+  margin: 0 auto;
+  border-radius: 50%;
+  background-color: white;
+  border: 0.125rem solid var(--main-theme);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  color: var(--main-theme);
+}
+.step-circle.active {
+  background-color: var(--main-theme);
+  color: white;
+}
+.step-circle.completed {
+  background-color: var(--main-theme);
+  color: white;
+}
+
+.step-circle:not(:last-child).completed::after {
+  content: "";
+  position: absolute;
+  top: 27%;
+  left: 61%;
+  width: 90%;
+  height: 2px;
+  background: var(--main-theme);
+}
+
+.step-label {
+  /* margin-top: 0.5rem; */
+  font-size: 0.875rem;
+}
+
+/* BUTTONS */
+.buttons {
+  position: sticky;
+  bottom: 0;
+  /* margin-bottom: -5rem; */
+  z-index: 10;
+}
+
+.btn-filled,
+.btn-outline {
+  width: 50%;
+  height: 3.6rem;
+  padding: 0.84rem 2rem;
+  border-radius: 0.95rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 15px;
+  position: relative;
+  /* bottom: -15.3rem; */
+}
+.btn {
+  width: 1.5rem;
+  height: 1.2rem;
+}
+
+.btn-filled {
+  background-color: var(--main-theme);
+  color: white;
+  width: 70%;
+  border: none;
+}
+
+.btn-outline {
+  background-color: white;
+  color: var(--main-theme);
+  width: 70%;
+  border: 0.8px solid var(--main-theme);
+}
+/* .form__grid1{
+ display: none;
+ grid-template-columns: 1fr;
+} */
+.form__grid1{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.form__grid1 input{
+  width: 34rem;
+}
+.gridbox{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0px;
+}
+.grid1{
+  flex: 1; 
+}
+.grid2{
+  flex: 1;
+}
+.form__grid {
+ margin-left: -45px;
+
+}
+.form-flex{
+  margin-left: 78px;
+}
+.form-flex p{
+  margin-left: -76px;
+}
+.custom-styles{
+  width: 100%;
+  height: 100%;
+  /* background-color: blue; */
+  padding-left: 28px;
+}
+.marion{
+  /* display: none; */
+  width: 200px;
+}
+.form-group input {
+  padding: 0.75rem 1rem;
+  width: 100%;
+  height: 5.6rem;
+  color: var(--clr-black);
+  border: 1px solid var(--main-theme);
+  background-color: var(--input-background);
+  border-radius: 1.1rem;
+  font-size: 1.4rem;
+  margin-top: -5px;
+}
+.form-group input:focus{
+  border: 1px solid var(--main-theme);
+}
+/* IMAGE UPLOADER */
+.upload-container {
+  width:100%;
+  height: 100%;
+  margin: 1rem auto;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.upload-container p{
+  text-align: left;
+  align-self: first baseline;
+  color: var(--clr-black);
+  font-size: 1.6em;
+  font-weight: 300;
+  margin-left: 8%;
+}
+
+.drop-box {
+  border: 1px solid var(--main-theme);
+  border-radius: 20px;
+  width: 32rem;
+  height: 18rem;
+  background-color: var(--clr-white);
+  cursor: pointer;
+  transition: background 0.2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  padding: 10px;
+}
+.upload-button {
+  margin-top: 1.4rem;
+  margin-bottom: 3rem;
+  width: 32rem;
+  height: 5.8rem;
+  border: 1px solid var(--main-theme);
+  padding: 10px 20px;
+  font-size: 1.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: var(--clr-white);
+  color: var(--main-theme);
+  border-radius: 15px;
+  transition: background 0.3s ease;
+}
+
+}
 
