--- a/src/Pages/Auth/Login.css
+++ b/src/Pages/Auth/Login.css
@@ -2,11 +2,6 @@
 .main-container-box {
   width: 100vw;
   height: 100vh;
-  /* background: radial-gradient(
-    circle at 200% 20%,
-    var(--light-green-gradient),
-    var(--dark-green)
-  ); */
   background: var(--main-theme);
   display: flex;
   align-items: center;
@@ -14,7 +9,6 @@
   overflow: hidden;
 }
 .green-side {
-  
   width: 66%;
   height: 100%;
   overflow: hidden;
@@ -486,6 +480,7 @@
 
 /* //MEDIA QUERY */
 /* MOBILE PHONES */
+/*  */
 @media screen and (max-width: 480px) {
   .green-side {
     display: none;
@@ -566,3 +561,7 @@
     font-weight: 400;
   }
 }
+/*  */
+/* MININ TABLET  */
+/*  */
+/*  */
