--- a/src/Components/Phone/PhoneNumberInput.module.css
+++ b/src/Components/Phone/PhoneNumberInput.module.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: auto;
   position: relative;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
 }
 .flex-container{
   /* padding: 0.75rem 1.4rem; */
@@ -49,4 +49,17 @@
   padding-left: 10px;
   margin: 0px;
   color: red;
+  width: 100%;
+  font-size: 1rem;
+border-radius: 4px;
+ background-color: #fdecea;
+ margin-top: 0.5rem;
+  animation: shake 0.5s ease-in-out;
+
+}
+
+@keyframes shake {
+  0%, 100% { transform: translateX(0); }
+  20%, 60% { transform: translateX(-3px); }
+  40%, 80% { transform: translateX(3px); }
 }
